fixed margin search bar and gap of cards

--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -2,7 +2,7 @@
 .card{
     padding-block: 0 36px;
     width:  100%;
-    --container:85%;
+    --container:90%;
     a{
         text-decoration: none;
     }
