--- a/src/scss/layout/_homepage.scss
+++ b/src/scss/layout/_homepage.scss
@@ -1,7 +1,9 @@
 @use '../abstracts' as *;
+
 // searchbar
 .search-bar{
     translate: 0 -38px;
+    margin-bottom: 70px;
 }
 
 // jobs
@@ -20,11 +22,13 @@
         &{
             grid-template-columns: 1fr 1fr;
         }
+
     }
 
     @media(min-width: $br-large){
         &{
             grid-template-columns: 1fr 1fr 1fr;
+            --gap:72px 30px;
         }
     } 
 }
